--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 *.js linguist-detectable=false
 *.css linguist-detectable=false
 *.scss linguist-detectable=false
+*.html linguist-detectable=false
 
 # Ensure Python files are emphasized
 *.py linguist-detectable=true
